making style mandatory for view register

--- a/webapp/views/configuration/view.html
+++ b/webapp/views/configuration/view.html
@@ -198,10 +198,8 @@
       </div>
     </terrama2-box>
 
-    <terrama2-box title="i18n.__('Style')" css="ctrl.css"
-                  handle-buttons="ctrl.styleButtons"
-                  extra="{disabled: !ctrl.hasStyle}">
-      <form name="forms.styleForm" novalidate ng-show="ctrl.hasStyle">
+    <terrama2-box title="i18n.__('Style')" css="ctrl.css">
+      <form name="forms.styleForm" novalidate>
         <!-- Vectorial -->
         <terrama2-style-legend form-ctrl="forms.styleForm" type="ctrl.targetDataSeriesType" columns-list="ctrl.columnsList" postgis-data="ctrl.postgisData" model="ctrl.legend"></terrama2-style-legend>
       </form>
