--- a/webapp/public/javascripts/angular/table/templates/tableFilter.html
+++ b/webapp/public/javascripts/angular/table/templates/tableFilter.html
@@ -7,9 +7,22 @@
 
   <div class="col-md-3">
     <div class="form-group">
-      <button class="btn btn-default" style="margin-top: 24px;"><i class="fa fa-search" style="margin-right: 5px;"></i>{{ i18n.__('Advanced') }}</button>
+      <button class="btn btn-default" style="margin-top: 24px;" ng-click="showHideAdvancedFilter()"><i class="fa fa-search" style="margin-right: 5px;"></i>{{ i18n.__('Advanced') }}</button>
     </div>
   </div>
+
+  <div class="col-md-12" style="margin: 0 0 10px 5px;" ng-show="showAdvancedFilter && extra.advancedFilters.length > 0">
+    <div class="col-md-12 col-xs-12">
+      <div class="col-md-2" ng-repeat="advancedFilter in extra.advancedFilters">
+        <div class="form-group">
+          <div class="checkbox">
+            <span style="font-weight: 700;"><input type="checkbox" ng-model="advancedFilter.checked" ng-click="executeAdvancedFilter()"/> {{ i18n.__(advancedFilter.name) }}</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="col-md-2 terrama2-nopadding-box" ng-show="linkToAdd">
     <div class="form-group">
       <ng-transclude ng-transclude-slot="extraButtonsSlot"></ng-transclude>
