Registration layouts improvements

--- a/webapp/public/javascripts/angular/data-series/templates/schedule.html
+++ b/webapp/public/javascripts/angular/data-series/templates/schedule.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="col-md-12 terrama2-nopadding-box">
   <form name="scheduleForm">
     <div class="col-md-7">
       <div class="form-group" style="top:30px;" terrama2-show-errors>
@@ -56,7 +56,7 @@
       </div>
     </div>
 
-    <div class="col-md-8" ng-if="isFrequency">
+    <div class="col-md-8 terrama2-nopadding-box" ng-if="isFrequency">
       <div class="col-md-6">
         <div class="form-group" terrama2-show-errors>
           <label>{{ i18n.__('Frequency') }}:</label>
