--- a/webapp/views/configuration/legend.html
+++ b/webapp/views/configuration/legend.html
@@ -51,7 +51,7 @@
               <textarea class="form-control" name="legendDescription" ng-model="ctrl.legend.description" rows="3" placeholder="{{ i18n.__('Legend Description') }}"></textarea>
             </div>
           </div>
-          <div class="col-md-12">
+          <div class="col-md-12 terrama2-nopadding-box">
             <span ng-repeat="level in ctrl.legend.levels track by $index">
               <div class="col-md-12 row">
                 <div class="col-md-6">
