--- a/webapp/views/configuration/project.html
+++ b/webapp/views/configuration/project.html
@@ -23,7 +23,7 @@
       <terrama2-alert-box2 handler="MessageBoxService.alertBox" close="close()"></terrama2-alert-box2>
     </div>
     <terrama2-box title="i18n.__('General Data')" css="css">
-      <div class="row">
+      <div class="col-md-12 terrama2-nopadding-box">
         <form name="forms.projectForm">
           <div class="col-md-10">
             <div class="form-group" terrama2-show-errors>
