--- a/webapp/views/configuration/view.html
+++ b/webapp/views/configuration/view.html
@@ -193,7 +193,7 @@
     </terrama2-box>
 
     <terrama2-box title="i18n.__('Schedule')" css="ctrl.css" ng-show="ctrl.isDynamic && ctrl.isValid">
-      <div class="col-md-12">
+      <div class="col-md-12 terrama2-nopadding-box">
         <terrama2-schedule model="ctrl.view.schedule" options="ctrl.scheduleOptions"></terrama2-schedule>
       </div>
     </terrama2-box>
