--- a/webapp/public/javascripts/angular/datetimepicker/templates/filterdatetimepicker.html
+++ b/webapp/public/javascripts/angular/datetimepicker/templates/filterdatetimepicker.html
@@ -1,4 +1,4 @@
-<div class="col-md-12">
+<div class="col-md-12 terrama2-nopadding-box">
   <div class='col-md-6'>
     <div class="form-group">
       <label>{{ i18n.__(beforeLabel || "Ignores data previous to") }}:</label>
