--- a/webapp/views/configuration/analysis.html
+++ b/webapp/views/configuration/analysis.html
@@ -148,90 +148,91 @@
     </div>
     <terrama2-box title="i18n.__('General Data')" css="ctrl.css">
       <div class="row">
-
-        <form name="forms.generalDataForm">
-          <div class="col-md-8">
-            <div class="form-group" terrama2-show-errors>
-              <label>{{ i18n.__("Name") }}:</label>
-              <input class="form-control" name="name" ng-model="ctrl.analysis.name" placeholder="{{ i18n.__('Analysis Name') }}" type="text" required>
-
-              <span class="help-block" 
-                    ng-show="forms.generalDataForm.name.$dirty && forms.generalDataForm.name.$invalid" 
-                    ng-class="{'has-error': generalDataForm.name.$invalid}">
-                    {{ i18n.__('Analysis name is required') }}
-              </span>
-            </div>
-          </div>
-          <!-- /.col -->
-
-          <div class="col-md-4">
-            <div class="form-group has-feedback" terrama2-show-errors>
-              <label>{{ i18n.__("Type") }}:</label>
-              <select class="form-control" 
-                      name="type" 
-                      ng-model="ctrl.analysis.type_id" 
-                      ng-disabled="ctrl.isUpdating"
-                      data-ng-change="ctrl.onAnalysisTypeChanged()" 
-                      required>
-                <option value="{[ Enums.AnalysisType.DCP ]}">{{ i18n.__('DCP') }}</option>
-                <option value="{[ Enums.AnalysisType.MONITORED ]}">{{ i18n.__('Monitored Object') }}</option>
-                <option value="{[ Enums.AnalysisType.GRID ]}">{{ i18n.__('Grid') }}</option>
-              </select>
-
-              <span class="help-block" 
-                    ng-show="forms.generalDataForm.type.$dirty && forms.generalDataForm.type.$error.required">
-                {{ i18n.__('Analysis type is required') }}
-              </span>
-            </div>
-            <!-- /.form-group -->
-          </div>
-
-          <div class="col-md-12">
-            <div class="form-group">
-              <label>{{ i18n.__("Description") }}:</label>
-              <textarea class="form-control" name="description" ng-model="ctrl.analysis.description" rows="3" placeholder="{{ i18n.__('Analysis Description') }}"></textarea>
-            </div>
-            <!-- /.form-group -->
-          </div>
-
-          <div class="col-md-8">
-            <div class="form-group has-feedback" terrama2-show-errors>
-              <label>{{ i18n.__("Service") }}:</label>
-              <ui-select name="instance" 
-                         ng-model="ctrl.analysis.instance_id" 
-                         ng-change="ctrl.onServiceChanged()" required>
-                <ui-select-match>
-                  <img ng-src="{[ BASE_URL ]}images/services/analysis/analysis_service.png" style="height: 20px; margin-top: -10px;"/>
-                  <span ng-bind="$select.selected.name"></span>
-                </ui-select-match>
-                <ui-select-choices repeat="instance.id as instance in (ctrl.instances | filter: {'name': $select.search}) track by instance.id">
-                  <img ng-src="{[ BASE_URL ]}images/services/analysis/analysis_service.png" style="height: 20px;"/>
-                  <span ng-bind="instance.name"></span>
-                </ui-select-choices>
-
-              </ui-select>
-
-              <span class="help-block" ng-show="forms.generalDataForm.instance.$dirty && forms.generalDataForm.instance.$error.required">
-                {{ i18n.__('Analysis service is required') }}
-              </span>
-            </div>
-            <!-- /.form-group -->
-          </div>
-
-          <div class="col-md-4">
-            <div class="form-group">
-              <div class="form-group">
-                <div class="checkbox">
-                  <label style="font-weight: 700; margin-top:19px;">
-                    <input name="active" ng-model="ctrl.analysis.active" ng-init="ctrl.initActive(configuration.analysis.active)" type="checkbox"> {{ i18n.__("Active") }}
-                  </label>
-                </div>
+        <div class="col-md-12">
+          <form name="forms.generalDataForm">
+            <div class="col-md-8">
+              <div class="form-group" terrama2-show-errors>
+                <label>{{ i18n.__("Name") }}:</label>
+                <input class="form-control" name="name" ng-model="ctrl.analysis.name" placeholder="{{ i18n.__('Analysis Name') }}" type="text" required>
+  
+                <span class="help-block" 
+                      ng-show="forms.generalDataForm.name.$dirty && forms.generalDataForm.name.$invalid" 
+                      ng-class="{'has-error': generalDataForm.name.$invalid}">
+                      {{ i18n.__('Analysis name is required') }}
+                </span>
               </div>
-
             </div>
-            <!-- /.form-group -->
-          </div>
-        </form>
+            <!-- /.col -->
+  
+            <div class="col-md-4">
+              <div class="form-group has-feedback" terrama2-show-errors>
+                <label>{{ i18n.__("Type") }}:</label>
+                <select class="form-control" 
+                        name="type" 
+                        ng-model="ctrl.analysis.type_id" 
+                        ng-disabled="ctrl.isUpdating"
+                        data-ng-change="ctrl.onAnalysisTypeChanged()" 
+                        required>
+                  <option value="{[ Enums.AnalysisType.DCP ]}">{{ i18n.__('DCP') }}</option>
+                  <option value="{[ Enums.AnalysisType.MONITORED ]}">{{ i18n.__('Monitored Object') }}</option>
+                  <option value="{[ Enums.AnalysisType.GRID ]}">{{ i18n.__('Grid') }}</option>
+                </select>
+  
+                <span class="help-block" 
+                      ng-show="forms.generalDataForm.type.$dirty && forms.generalDataForm.type.$error.required">
+                  {{ i18n.__('Analysis type is required') }}
+                </span>
+              </div>
+              <!-- /.form-group -->
+            </div>
+  
+            <div class="col-md-12">
+              <div class="form-group">
+                <label>{{ i18n.__("Description") }}:</label>
+                <textarea class="form-control" name="description" ng-model="ctrl.analysis.description" rows="3" placeholder="{{ i18n.__('Analysis Description') }}"></textarea>
+              </div>
+              <!-- /.form-group -->
+            </div>
+  
+            <div class="col-md-8">
+              <div class="form-group has-feedback" terrama2-show-errors>
+                <label>{{ i18n.__("Service") }}:</label>
+                <ui-select name="instance" 
+                           ng-model="ctrl.analysis.instance_id" 
+                           ng-change="ctrl.onServiceChanged()" required>
+                  <ui-select-match>
+                    <img ng-src="{[ BASE_URL ]}images/services/analysis/analysis_service.png" style="height: 20px; margin-top: -10px;"/>
+                    <span ng-bind="$select.selected.name"></span>
+                  </ui-select-match>
+                  <ui-select-choices repeat="instance.id as instance in (ctrl.instances | filter: {'name': $select.search}) track by instance.id">
+                    <img ng-src="{[ BASE_URL ]}images/services/analysis/analysis_service.png" style="height: 20px;"/>
+                    <span ng-bind="instance.name"></span>
+                  </ui-select-choices>
+  
+                </ui-select>
+  
+                <span class="help-block" ng-show="forms.generalDataForm.instance.$dirty && forms.generalDataForm.instance.$error.required">
+                  {{ i18n.__('Analysis service is required') }}
+                </span>
+              </div>
+              <!-- /.form-group -->
+            </div>
+  
+            <div class="col-md-4">
+              <div class="form-group">
+                <div class="form-group">
+                  <div class="checkbox">
+                    <label style="font-weight: 700; margin-top:19px;">
+                      <input name="active" ng-model="ctrl.analysis.active" ng-init="ctrl.initActive(configuration.analysis.active)" type="checkbox"> {{ i18n.__("Active") }}
+                    </label>
+                  </div>
+                </div>
+  
+              </div>
+              <!-- /.form-group -->
+            </div>
+          </form>
+        </div>
         <!--./ generalDataForm -->
       </div>
       <!-- /.row -->
@@ -239,7 +240,7 @@
 
     <terrama2-box title="i18n.__('Store')" css="ctrl.css" ng-show="forms.generalDataForm.type.$valid">
 
-      <div class="row">
+      <div class="col-md-12 terrama2-nopadding-box">
 
         <form name="forms.storagerDataForm">
 
@@ -282,12 +283,12 @@
         </form>
         <div class="col-md-12 terrama2-nopadding-box">
           <!-- schema form -->
-          <div class="col-md-12" ng-show="ctrl.showStoragerForm">
+          <div class="col-md-12 terrama2-nopadding-box" ng-show="ctrl.showStoragerForm">
             <form name="forms.storagerForm" sf-schema="ctrl.schemaStorager" sf-form="ctrl.formStorager" sf-model="ctrl.modelStorager" sf-options="ctrl.options"></form>
           </div>
         </div>
 
-        <div class="col-md-12" style="margin-top: 30px;">
+        <div class="col-md-12">
           <div class="col-md-12 terrama2-nopadding-box">
             <div class="box box-default box-solid">
               <div class="box-header with-border">
@@ -350,7 +351,7 @@
     </terrama2-box>
 
     <terrama2-box title="ctrl.dataSeriesBoxName" css="ctrl.css" ng-show="forms.generalDataForm.type.$valid">
-      <div class="row">
+      <div class="col-md-12 terrama2-nopadding-box">
         <div class="col-md-12">
           <button type="button" class="btn btn-default pull-right" data-toggle="modal" data-target="#dataSeriesModal" style="margin-bottom: 15px">
             <i class="fa fa-plus"></i>
@@ -479,7 +480,7 @@
                 </div>
               </div> <!-- ./col-md-6 -->
 
-              <div class="col-md-6" ng-show="ctrl.analysis.grid.area_of_interest_type === ctrl.interestAreaTypes.CUSTOM.value">
+              <div class="col-md-6 terrama2-nopadding-box" ng-show="ctrl.analysis.grid.area_of_interest_type === ctrl.interestAreaTypes.CUSTOM.value">
                 <terrama2-bounded-box ng-model="ctrl.analysis.grid.area_of_interest_bounded" is-required="ctrl.analysis.grid.area_of_interest_type === ctrl.interestAreaTypes.CUSTOM.value">
                 </terrama2-bounded-box>
               </div>
@@ -503,7 +504,7 @@
                 </div>
               </div> <!-- ./col-md-6 -->
 
-              <div class="col-md-6" ng-show="ctrl.analysis.grid.resolution_type === ctrl.resolutionTypes.CUSTOM.value">
+              <div class="col-md-6 terrama2-nopadding-box" ng-show="ctrl.analysis.grid.resolution_type === ctrl.resolutionTypes.CUSTOM.value">
                 <div class="col-md-6">
                   <div class="form-group" terrama2-show-errors>
                     <label>{{ i18n.__("X") }}:</label>
@@ -675,7 +676,7 @@
     </terrama2-box>
 
     <terrama2-box title="i18n.__('Script')" css="ctrl.css" ng-show="forms.generalDataForm.type.$valid">
-      <div class="row">
+      <div class="col-md-12 terrama2-nopadding-box">
 
         <div class="col-md-12">
           <form name="forms.scriptForm">
