--- a/webapp/views/configuration/interpolator.html
+++ b/webapp/views/configuration/interpolator.html
@@ -6,26 +6,26 @@
 {% block title %} TerraMA² {{ i18n.__('Interpolator Registration') }} {% endblock %}
 
 {% block styles %}
-<link rel="stylesheet" href="{[ BASE_URL ]}bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.css">
-<link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}bower_components/angular-wizard/dist/angular-wizard.min.css">
-<link rel="stylesheet" href="{[ BASE_URL ]}bower_components/angular-ui-select/dist/select.min.css" />
+<link rel="stylesheet" href="{[ BASE_URL ]}externals/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.css">
+<link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}externals/angular-wizard/dist/angular-wizard.min.css">
+<link rel="stylesheet" href="{[ BASE_URL ]}externals/angular-ui-select/dist/select.min.css" />
 {% endblock %}
 
 
 {% block javascripts %}
 <!-- Angular -->
-<script type="text/javascript" src="{[ BASE_URL ]}bower_components/angular-wizard/dist/angular-wizard.js"></script>
+<script type="text/javascript" src="{[ BASE_URL ]}externals/angular-wizard/dist/angular-wizard.js"></script>
 
-<script type="text/javascript" src="{[ BASE_URL ]}bower_components/moment/moment.js"></script>
-<script type="text/javascript" src="{[ BASE_URL ]}bower_components/moment/locale/pt-br.js"></script>
-<script type="text/javascript" src="{[ BASE_URL ]}bower_components/moment/locale/es.js"></script>
-<script type="text/javascript" src="{[ BASE_URL ]}bower_components/moment/locale/fr.js"></script>
-<script type="text/javascript" src="{[ BASE_URL ]}bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
-<script type="text/javascript" src="{[ BASE_URL ]}bower_components/angular-eonasdan-datetimepicker/dist/angular-eonasdan-datetimepicker.min.js"></script>
+<script type="text/javascript" src="{[ BASE_URL ]}externals/moment/moment.js"></script>
+<script type="text/javascript" src="{[ BASE_URL ]}externals/moment/locale/pt-br.js"></script>
+<script type="text/javascript" src="{[ BASE_URL ]}externals/moment/locale/es.js"></script>
+<script type="text/javascript" src="{[ BASE_URL ]}externals/moment/locale/fr.js"></script>
+<script type="text/javascript" src="{[ BASE_URL ]}externals/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
+<script type="text/javascript" src="{[ BASE_URL ]}externals/angular-eonasdan-datetimepicker/dist/angular-eonasdan-datetimepicker.min.js"></script>
 
 <!-- Angular ui router -->
-<script type="text/javascript" src="{[ BASE_URL ]}bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-<script src="{[ BASE_URL ]}bower_components/angular-ui-select/dist/select.min.js"></script>
+<script type="text/javascript" src="{[ BASE_URL ]}externals/angular-ui-router/release/angular-ui-router.min.js"></script>
+<script src="{[ BASE_URL ]}externals/angular-ui-select/dist/select.min.js"></script>
 
 <script>
   var configuration = {
