Button to uncheck all visible layers

--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -39,8 +39,14 @@
             <div id="terrama2-layerexplorer"></div>
             <li class="header" style="color: #b8c7ce;">
               <span data-i18n="VISIBLE LAYERS"></span>
+            </li>
+            <li class="header" style="color: #b8c7ce;">
+              <span>&nbsp</span>
               <span id="visible-layers-extent" class="pull-right" style="font-size: 15px; cursor: pointer;">
                 <i class="glyphicon glyphicon-resize-full"></i>
+              </span>
+              <span id="uncheck-layers" class="pull-right" style="font-size: 15px; cursor: pointer; padding-right: 10px" data-i18n="[title]Uncheck all layers">
+                <i class="fa fa-clone"></i>
               </span>
             </li>
             <div id="terrama2-sortlayers"></div>
