[Partial] - auto update layer

--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -48,6 +48,9 @@
               <span id="uncheck-layers" class="pull-right" style="font-size: 15px; cursor: pointer; padding-right: 10px" data-i18n="[title]Uncheck all layers">
                 <i class="fa fa-clone"></i>
               </span>
+              <span class="pull-right" style="font-size: 15px; cursor: pointer; padding-right: 10px">
+                  <input type="checkbox" id="auto-update">
+                </span>
             </li>
             <div id="terrama2-sortlayers"></div>
           </ul>
