--- a/webapp/public/javascripts/angular/data-series/templates/schedule.html
+++ b/webapp/public/javascripts/angular/data-series/templates/schedule.html
@@ -22,7 +22,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="col-md-12 terrama2-nopadding-box">
       <div class="col-md-7" ng-if="model.scheduleType == 2">
         <div class="row">
           <terrama2-filter-datetime-picker before-label="'Start Date'" 
