Show auto alert legend button on change event

--- a/webapp/views/configuration/alert.html
+++ b/webapp/views/configuration/alert.html
@@ -240,7 +240,7 @@
                     name="legendAttributeMo"
                     ng-model="ctrl.legend_attribute_mo"
                     ng-pattern="ctrl.regexColumn"
-                    ng-blur="ctrl.getColumnValues()"
+                    ng-change="ctrl.getColumnValues()"
                     ng-required="ctrl.dataSeriesType === 'ANALYSIS_MONITORED_OBJECT'"
                     list='tableColumnsList'>
               <span class="help-block"
