Saving reprocessing historical data on schedule

--- a/webapp/public/javascripts/angular/data-series/templates/schedule.html
+++ b/webapp/public/javascripts/angular/data-series/templates/schedule.html
@@ -27,8 +27,8 @@
         <div class="row">
           <terrama2-filter-datetime-picker before-label="'Start Date'" 
                                             after-label="'End Date'"
-                                            before-datetime="historical.startDate"
-                                            after-datetime="historical.endDate">
+                                            before-datetime="model.historical.startDate"
+                                            after-datetime="model.historical.endDate">
           </terrama2-filter-datetime-picker>
         </div>
       </div>
