--- a/webapp/views/configuration/analysis.html
+++ b/webapp/views/configuration/analysis.html
@@ -296,7 +296,7 @@
               </div>
 
               <div style="display: block;" class="box-body">
-                <terrama2-schedule model="ctrl.schedule" options="ctrl.scheduleOptions" historical="ctrl.analysis.historical"></terrama2-schedule>
+                <terrama2-schedule model="ctrl.schedule" options="ctrl.scheduleOptions"></terrama2-schedule>
               </div>
             </div>
           </div>
