--- a/webapp/views/configuration/legend.html
+++ b/webapp/views/configuration/legend.html
@@ -31,7 +31,7 @@
 
 {% block content %}
 <div ng-controller="LegendRegisterUpdateController as ctrl">
-  <terrama2-box title="i18n.__('Legend Registration')">
+  <terrama2-box title="i18n.__('Legend Registration')" helper="'{[ BASE_URL ]}helper/add_legends.html'">
     <div class="col-md-12">
       <terrama2-alert-box2 handler="ctrl.MessageBoxService.alertBox" close="ctrl.close()"></terrama2-alert-box2>
     </div>
