removing unnecessary code

--- a/webmonitor/public/stylesheets/TerraMA2WebMonitor.css
+++ b/webmonitor/public/stylesheets/TerraMA2WebMonitor.css
@@ -694,13 +694,6 @@ img[src=""] {
   overflow-y: auto;
 }
 
-#filter-box {
-  position: absolute;
-  width: 600px;
-  height: 480px;
-  right: 65px;
-}
-
 #legend-box {
   position: absolute;
   width: 320px;
@@ -708,7 +701,7 @@ img[src=""] {
   right: 65px;
 }
 
-#legend-box, #layer-toolbox, #filter-box {
+#legend-box, #layer-toolbox {
   background-color: white;
   z-index: 99999;
   border-radius: 5px;
@@ -716,7 +709,7 @@ img[src=""] {
   top: 21px;
 }
 
-#legend-box > .legend-header, #layer-toolbox .layer-toolbox-header, #filter-box > .filter-header {
+#legend-box > .legend-header, #layer-toolbox .layer-toolbox-header {
   padding: 10px;
   color: #000000;
   overflow: hidden;
@@ -745,7 +738,7 @@ img[src=""] {
   margin-right: 9px;
 }
 
-#legend-box > .legend-body, #layer-toolbox .layer-toolbox-body, #filter-box > .filter-body {
+#legend-box > .legend-body, #layer-toolbox .layer-toolbox-body {
   padding: 10px;
   overflow: auto;
   width: 100%;
@@ -753,9 +746,7 @@ img[src=""] {
   cursor: default;
 }
 
-#filter-box > .filter-body > .row, #filter-items > .row { margin: 0; }
-
-#legend-box > .legend-body, #filter-box > .filter-body {
+#legend-box > .legend-body {
   margin-top: 45px;
   position: absolute;
   height: calc(100% - 45px);
