--- a/webapp/public/javascripts/angular/table/templates/table.html
+++ b/webapp/public/javascripts/angular/table/templates/table.html
@@ -56,6 +56,7 @@
           <div class="modal-body">
             <p><b>{{ i18n.__('Service version')}}</b>{{": " + serviceVersion}}</p>
             <p><b>{{ i18n.__('Service start time')}}</b>{{": " + serviceStartTime}}</p>
+            <p ng-if="serviceVersionMessage" style="color: red;"><b>{{ serviceVersionMessage }}</b></p>
             <p ng-if="showServiceLoggerOffline" style="color: red;"><b>{{ i18n.__('The service can not access the log database!')}}</b></p>
             <p ng-if="maps_server_connection === false" style="color: red;"><b>{{ i18n.__('The service can not access the map server!')}}</b></p>
 
@@ -210,7 +211,7 @@
               <i class="fa fa-warning"></i>
             </button>
             <button ng-show="element.online" ng-click="showInfo(element)" class="btn btn-default btn-sm pull-right" style="width: 34px; height: 30px;" ng-class="{'service-warning': !element.logger_online || element.maps_server_connection === false}"> 
-              <i ng-class="{ 'fa fa-info': element.logger_online && element.maps_server_connection !== false, 'fa fa-warning': !element.logger_online || element.maps_server_connection === false}" ></i>
+              <i ng-class="{ 'fa fa-info': element.logger_online && element.maps_server_connection !== false && element.different_versions !== true, 'fa fa-warning': !element.logger_online || element.maps_server_connection === false || element.different_versions === true }" ></i>
             </button>
           </td>
 
