allowing static grid views to be saved without style

--- a/webapp/views/configuration/view.html
+++ b/webapp/views/configuration/view.html
@@ -201,7 +201,7 @@
     <terrama2-box title="i18n.__('Style')" css="ctrl.css">
       <form name="forms.styleForm" novalidate>
         <!-- Vectorial -->
-        <terrama2-style-legend form-ctrl="forms.styleForm" type="ctrl.targetDataSeriesType" columns-list="ctrl.columnsList" postgis-data="ctrl.postgisData" model="ctrl.legend"></terrama2-style-legend>
+        <terrama2-style-legend form-ctrl="forms.styleForm" type="ctrl.targetDataSeriesType" is-dynamic="ctrl.isDynamic" is-updating="ctrl.isUpdating" columns-list="ctrl.columnsList" postgis-data="ctrl.postgisData" model="ctrl.legend"></terrama2-style-legend>
       </form>
     </terrama2-box>
 
