--- a/webapp/public/javascripts/angular/views/templates/style.html
+++ b/webapp/public/javascripts/angular/views/templates/style.html
@@ -1,6 +1,7 @@
 <div class="col-md-6 form-group" ng-if="$ctrl.type !== $ctrl.DataSeriesType.DCP">
     <label>{{$ctrl.i18n.__('Creation Type') }}:</label>
     <select class="form-control" name="styles" ng-change="$ctrl.changeCreationType()" ng-model="$ctrl.model.metadata.creation_type">
+        <option value="default" ng-if="$ctrl.type === $ctrl.DataSeriesType.GRID && !$ctrl.isDynamic">{{$ctrl.i18n.__('Default')}}</option>
         <option value="editor">{{$ctrl.i18n.__('Editor')}}</option>
         <option value="xml">{{$ctrl.i18n.__('SLD')}}</option>
         <option ng-repeat="option in $ctrl.predefinedStyles | filter: $ctrl.filterPredefinedStyles" value="{{option.id}}">{{$ctrl.i18n.__(option.name)}}</option>
