--- a/webapp/views/configuration/alerts.html
+++ b/webapp/views/configuration/alerts.html
@@ -35,6 +35,8 @@
           <terrama2-table fields="ctrl.fields"
                       model="ctrl.model"
                       link="ctrl.link"
+                      status-change-link="ctrl.statusChangeLink"
+                      services-instances="ctrl.servicesInstances"
                       icon="ctrl.icon"
                       icon-properties="ctrl.iconProperties"
                       link-to-add="ctrl.linkToAdd"
