--- a/webapp/views/configuration/providers.html
+++ b/webapp/views/configuration/providers.html
@@ -49,7 +49,7 @@
           <terrama2-alert-box2 handler="MessageBoxService.alertBox" close="close()"></terrama2-alert-box2>
         </div>
 
-        <terrama2-table fields="fields" model="model" link="link" icon-properties="iconProperties" 
+        <terrama2-table fields="fields" model="model" link="link" status-change-link="statusChangeLink" icon-properties="iconProperties" 
                         link-to-add="linkToAdd" icon="iconFn" context="'data provider'" 
                         remove="remove(object);" extra="extra" order-by="'name'"></terrama2-table>
       </div>
