--- a/webapp/views/configuration/staticData.html
+++ b/webapp/views/configuration/staticData.html
@@ -20,6 +20,9 @@
    link: function(object) {
      return baseUrl + object.id + "?type=static#/wizard";
    },
+   statusChangeLink: function(object) {
+     return baseUrl + "changeStatus/" + object.id;
+   },
    iconFn: function(object) {
      if (object.data_series_semantics.data_series_type_name === globals.enums.DataSeriesType.GRID) {
        return "{[ BASE_URL ]}images/static-data-series/grid/grid.png";
@@ -51,7 +54,7 @@
           <terrama2-alert-box2 handler="MessageBoxService.alertBox" close="close()"></terrama2-alert-box2>
         </div>
 
-        <terrama2-table fields="fields" model="model" icon="iconFn" link="link" 
+        <terrama2-table fields="fields" model="model" icon="iconFn" link="link" status-change-link="statusChangeLink" 
                        icon-properties="iconProperties" link-to-add="linkToAdd"
                        remove="remove(object)" extra="extra" order-by="orderBydata">
         </terrama2-table>
