--- a/webapp/views/configuration/analysis_list.html
+++ b/webapp/views/configuration/analysis_list.html
@@ -34,7 +34,7 @@
       <terrama2-alert-box2 handler="MessageBoxService.alertBox" close="close()"></terrama2-alert-box2>
     </div>
 
-    <terrama2-table fields="fields" model="model" link="link" icon="icon" icon-properties="iconProperties" 
+    <terrama2-table fields="fields" model="model" link="link" status-change-link="statusChangeLink" services-instances="servicesInstances" icon="icon" icon-properties="iconProperties" 
                     link-to-add="linkToAdd" context="'analysis'" remove="remove(object);" 
                     extra="extra" order-by="'name'">
     </terrama2-table>
