Improving analysis table

--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -349,8 +349,8 @@
       var message = "{[message.content]}";
       var defaultLanguage = "{[ userLocale | 'en' ]}";
     </script>
-    <!--<script type="text/javascript" src="{[ BASE_URL ]}dist/TerraMA2WebMonitor.min.js"></script>-->
-    <script type="text/javascript" data-main="{[ BASE_URL ]}javascripts/Startup.js" src="{[ BASE_URL ]}externals/requirejs/require.js"></script>
+    <script type="text/javascript" src="{[ BASE_URL ]}dist/TerraMA2WebMonitor.min.js"></script>
+    <!--<script type="text/javascript" data-main="{[ BASE_URL ]}javascripts/Startup.js" src="{[ BASE_URL ]}externals/requirejs/require.js"></script>-->
     <iframe id="exportation-iframe" class="hidden"></iframe>
     <div id="translation-div" class="hidden"></div>
   </body>
