--- a/webapp/views/configuration/providers.html
+++ b/webapp/views/configuration/providers.html
@@ -27,6 +27,7 @@
           break;
         case "HTTP":
         case "HTTPS":
+        case "STATIC-HTTP":
           return BASE_URL + "images/data-server/http/http.png";
           break;
       }
