--- a/webapp/public/javascripts/angular/interpolator/templates/inter-parameter.html
+++ b/webapp/public/javascripts/angular/interpolator/templates/inter-parameter.html
@@ -12,11 +12,14 @@
             </select>
           </div>
         </div>
+        <div class="col-md-6">
+          <div class="form-group" terrama2-show-errors>
+            <label>{{ i18n.__('Valid time interval') }}:</label>
+            <input class="form-control" id="time_interval" name="time_interval" ng-model="inter.metadata.time_interval" type="text" required>
+          </div>
+        </div>
       </div>
-    
-      <div class="col-md-12">
-      </div>
-    
+
       <div class="col-md-12">
         <div class="col-md-6">
           <div class="form-group" terrama2-show-errors>
