--- a/webapp/views/configuration/interpolator.html
+++ b/webapp/views/configuration/interpolator.html
@@ -43,6 +43,9 @@
   <div class="box box-default">
     <div class="box-header with-border">
       <h3 class="box-title">Interpolation register</h3>
+      <a href="{[ BASE_URL ]}helper/add_dynamic_data_interpolation.html" target="_blank" style="color: #97a0b3; float: right;">
+          <button type="button" class="btn btn-box-tool terrama2-circle-button" style="margin-right: 15px;" data-toggle="tooltip" data-placement="bottom"><i class="fa fa-question"></i></button>
+        </a>
     </div>
 
     <!-- /.box-header -->
