Final changes to animate wind data

--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -332,7 +332,7 @@
     <script type="text/javascript" src="{[ BASE_URL ]}externals/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="{[ BASE_URL ]}externals/jquery-ui/jquery-ui.min.js"></script>
     <script type="text/javascript" src="{[ BASE_URL ]}externals/bootstrap-daterangepicker/daterangepicker.js"></script>
-    <script type="text/javascript" src="{[ BASE_URL ]}externals/openlayers/ol.js"></script>
+    <script type="text/javascript" src="{[ BASE_URL ]}externals/openlayers/ol-debug.js"></script>
     <script type="text/javascript" src="{[ BASE_URL ]}socket.io/socket.io.js"></script>
     <script type="text/javascript" src="{[ BASE_URL ]}externals/datatables/media/js/jquery.dataTables.min.js"></script>
     <script type="text/javascript" src="{[ BASE_URL ]}externals/underscore/underscore-min.js"></script>
