Implement UI Select Addon for SchemaForm

--- a/webapp/views/configuration/dataset.html
+++ b/webapp/views/configuration/dataset.html
@@ -81,8 +81,10 @@
 
   <!-- Angular tree control -->
   <script type="text/javascript" src="{[ BASE_URL ]}externals/angular-tree-control/angular-tree-control.js"></script>
-
+  <!-- Angular multiselect  -->
+  <script type="text/javascript" src="{[ BASE_URL ]}externals/angularjs-dropdown-multiselect/dist/src/angularjs-dropdown-multiselect.js"></script>
   <!-- Angular Schema Form dependencies -->
+
   <script type="text/javascript" src="{[ BASE_URL ]}externals/angular-sanitize/angular-sanitize.js"></script>
   <script type="text/javascript" src="{[ BASE_URL ]}externals/tv4/tv4.js"></script>
   <script type="text/javascript" src="{[ BASE_URL ]}externals/objectpath/lib/ObjectPath.js"></script>
@@ -100,7 +102,7 @@
 
   <!-- Angular ui router -->
   <script type="text/javascript" src="{[ BASE_URL ]}externals/angular-ui-router/release/angular-ui-router.min.js"></script>
-  
+
   <script src="{[ BASE_URL ]}externals/angular-ui-select/dist/select.min.js"></script>
 
   <script type="text/javascript">
