--- a/webapp/views/base/layout.html
+++ b/webapp/views/base/layout.html
@@ -301,7 +301,7 @@
     });
   </script>
   <!-- jQuery DataTables -->
-  <script src="{[ BASE_URL ]}externals/datatables/media/js/jquery.dataTables.min.js"></script>
+  <script src="{[ BASE_URL ]}externals/datatables/media/js/jquery.dataTables.js"></script>
   <!-- Angular JS -->
   <script src="{[ BASE_URL ]}externals/angular/angular.min.js"></script>
   <!-- Internationalization -->
