add active checkbox to projects

--- a/webapp/views/configuration/project.html
+++ b/webapp/views/configuration/project.html
@@ -43,6 +43,15 @@
               </div>
             </div>
           </div>
+          <div class="col-md-2">
+            <div class="form-group">
+              <div class="checkbox">
+                <label style="font-weight: 700; margin-top:19px;">
+                  <input type="checkbox" name="active" ng-model="project.active"> {{ i18n.__("Active") }}
+                </label>
+              </div>
+            </div>
+          </div>
           <!-- /.col -->
   
           <div class="col-md-12">
