--- a/webapp/views/configuration/interpolator.html
+++ b/webapp/views/configuration/interpolator.html
@@ -42,7 +42,7 @@
 <div class="col-md-12">
   <div class="box box-default">
     <div class="box-header with-border">
-      <h3 class="box-title">Interpolation register</h3>
+      <h3 class="box-title">Interpolation Registration</h3>
       <a href="{[ BASE_URL ]}helper/add_dynamic_data_interpolation.html" target="_blank" style="color: #97a0b3; float: right;">
           <button type="button" class="btn btn-box-tool terrama2-circle-button" style="margin-right: 15px;" data-toggle="tooltip" data-placement="bottom"><i class="fa fa-question"></i></button>
         </a>
