fix minutes unit in interpolation valid interval

--- a/webapp/public/javascripts/angular/interpolator/templates/inter-parameter.html
+++ b/webapp/public/javascripts/angular/interpolator/templates/inter-parameter.html
@@ -22,7 +22,7 @@
                         ng-model="inter.intervalType"
                         required>
                   <option value="s">{{ i18n.__('Seconds') }}</option>
-                  <option value="m">{{ i18n.__('Minutes') }}</option>
+                  <option value="min">{{ i18n.__('Minutes') }}</option>
                   <option value="h">{{ i18n.__('Hours') }}</option>
                   <option value="d">{{ i18n.__('Days') }}</option>
                 </select>
