--- a/webapp/public/javascripts/angular/data-series/templates/csvFormat.html
+++ b/webapp/public/javascripts/angular/data-series/templates/csvFormat.html
@@ -18,7 +18,7 @@
   <div class="col-md-1 col-sm-2 col-xs-3">
     <div class="form-group" terrama2-show-errors>
       <label ng-bind="$ctrl.i18n.__('Delimiter')+':'"></label>
-      <input class="form-control" id="delimiter" name="delimiter" type="text" ng-model="$ctrl.csvFormatData.delimiter" ng-value="','" required>
+      <input class="form-control" id="delimiter" name="delimiter" type="text" ng-model="$ctrl.csvFormatData.delimiter" required>
     </div>
   </div>
 
