--- a/webapp/public/javascripts/angular/data-series/templates/csvFieldDetail.html
+++ b/webapp/public/javascripts/angular/data-series/templates/csvFieldDetail.html
@@ -5,15 +5,15 @@
 					<label ng-bind="$ctrl.i18n.__('Type')+':'"></label>
 					<select name="type" class="form-control" ng-model="$ctrl.field.type" ng-change="$ctrl.onFieldTypeChange()" required>
 						<option ng-repeat="type in $ctrl.fieldsType" ng-if="$ctrl.semantics == 'OCCURRENCE' || type.value != 'GEOMETRY_POINT' " value="{{type.value}}">{{$ctrl.i18n.__(type.title)}}</option>
-					</select> 
+					</select>
 				</div>
 			</div>
-			
+
 			<div ng-if="$ctrl.field.type == 'GEOMETRY_POINT'">
 				<div class="col-md-3">
 					<div class="form-group" terrama2-show-errors>
 						<label ng-bind="$ctrl.i18n.__('Latitude')+':'"></label>
-						<input name="latitude" class="form-control" type="text" ng-model="$ctrl.field.latitude_property_name" required>
+						<input name="latitude" class="form-control" type="text" ng-model="$ctrl.field.latitude_property_name" ng-change="$ctrl.onChangeField($ctrl.field)" required>
 						<label class="help-block text-danger"
 										ng-show="csvFieldsForm.latitude.$dirty && csvFieldsForm.latitude.$error.required"
 										ng-bind="$ctrl.i18n.__('Required')">
@@ -23,7 +23,7 @@
 				<div class="col-md-3">
 					<div class="form-group" terrama2-show-errors>
 						<label ng-bind="$ctrl.i18n.__('Longitude')+':'"></label>
-						<input name="longitude" class="form-control" type="text" ng-model="$ctrl.field.longitude_property_name" required>
+						<input name="longitude" class="form-control" type="text" ng-model="$ctrl.field.longitude_property_name" ng-change="$ctrl.onChangeField($ctrl.field)" required>
 						<label class="help-block text-danger"
 										ng-show="csvFieldsForm.longitude.$dirty && csvFieldsForm.longitude.$error.required"
 										ng-bind="$ctrl.i18n.__('Required')">
@@ -33,7 +33,7 @@
 				<div class="col-md-3">
 					<div class="form-group" terrama2-show-errors>
 						<label ng-bind="$ctrl.i18n.__('Alias')+':'"></label>
-						<input name="alias" class="form-control" type="text" ng-model="$ctrl.field.alias" pattern="^[a-zA-Z_][a-zA-Z0-9_]*$" required>
+						<input name="alias" class="form-control" type="text" ng-model="$ctrl.field.alias" ng-change="$ctrl.onChangeField($ctrl.field)" pattern="^[a-zA-Z_][a-zA-Z0-9_]*$" required>
 						<label class="help-block text-danger"
 										ng-if="csvFieldsForm.alias.$dirty && csvFieldsForm.alias.$error.required"
 										ng-bind="$ctrl.i18n.__('Required')">
@@ -51,17 +51,17 @@
 					<div class="col-md-6">
 						<div class="form-group" terrama2-show-errors>
 							<label ng-bind="$ctrl.i18n.__('Attribute Name')+':'"></label>
-							<input name="property_name" class="form-control" type="text" ng-model="$ctrl.field.property_name" required>
+							<input name="property_name" class="form-control" type="text" ng-model="$ctrl.field.property_name" ng-change="$ctrl.onChangeField($ctrl.field)" required>
 						<label class="help-block text-danger"
 										ng-show="csvFieldsForm.property_name.$dirty && csvFieldsForm.property_name.$error.required"
 										ng-bind="$ctrl.i18n.__('Required')">
 						</label>
 						</div>
 					</div>
-					<div class="col-md-6">			
+					<div class="col-md-6">
 						<div class="form-group" terrama2-show-errors>
 							<label ng-bind="$ctrl.i18n.__('Alias')+':'"></label>
-							<input name="alias" class="form-control" type="text" ng-model="$ctrl.field.alias" pattern="^[a-zA-Z_][a-zA-Z0-9_]*$" required>
+							<input name="alias" class="form-control" type="text" ng-model="$ctrl.field.alias" ng-change="$ctrl.onChangeField($ctrl.field)" pattern="^[a-zA-Z_][a-zA-Z0-9_]*$" required>
 						<label class="help-block text-danger"
 										ng-show="csvFieldsForm.alias.$dirty && csvFieldsForm.alias.$error.required"
 										ng-bind="$ctrl.i18n.__('Required')">
@@ -79,7 +79,7 @@
 				<div  class="col-md-3">
 					<div class="form-group" terrama2-show-errors>
 						<label ng-bind="$ctrl.i18n.__('Attribute Name')+':'"></label>
-						<input name="property_name" class="form-control" type="text" ng-model="$ctrl.field.property_name" required>
+						<input name="property_name" class="form-control" type="text" ng-model="$ctrl.field.property_name" ng-change="$ctrl.onChangeField($ctrl.field)" required>
 						<label class="help-block text-danger"
 										ng-show="csvFieldsForm.property_name.$dirty && csvFieldsForm.property_name.$error.required"
 										ng-bind="$ctrl.i18n.__('Required')">
@@ -89,7 +89,7 @@
 				<div class="col-md-3">
 					<div class="form-group" terrama2-show-errors>
 						<label ng-bind="$ctrl.i18n.__('Format')+':'"></label>
-						<input name="format" class="form-control" type="text" ng-model="$ctrl.field.format" pattern="^([\w*.:\/\\\s-]+|%YYYY|%YY|%MM|%DD|%hh|%mm|%ss)+$" required>
+						<input name="format" class="form-control" type="text" ng-model="$ctrl.field.format" ng-change="$ctrl.onChangeField($ctrl.field)" pattern="^([\w*.:\/\\\s-]+|%YYYY|%YY|%MM|%DD|%hh|%mm|%ss)+$" required>
 						<label class="help-block text-danger"
 										ng-show="csvFieldsForm.format.$dirty && csvFieldsForm.format.$error.required"
 										ng-bind="$ctrl.i18n.__('Required')">
@@ -103,7 +103,7 @@
 				<div class="col-md-3">
 					<div class="form-group" terrama2-show-errors>
 						<label ng-bind="$ctrl.i18n.__('Alias')+':'"></label>
-						<input name="alias" class="form-control" type="text" ng-model="$ctrl.field.alias" pattern="^[a-zA-Z_][a-zA-Z0-9_]*$" required>
+						<input name="alias" class="form-control" type="text" ng-model="$ctrl.field.alias" ng-change="$ctrl.onChangeField($ctrl.field)" pattern="^[a-zA-Z_][a-zA-Z0-9_]*$" required>
 						<label class="help-block text-danger"
 										ng-show="csvFieldsForm.alias.$dirty && csvFieldsForm.alias.$error.required"
 										ng-bind="$ctrl.i18n.__('Required')">
