--- a/webapp/public/javascripts/angular/data-series/templates/csvFormat.html
+++ b/webapp/public/javascripts/angular/data-series/templates/csvFormat.html
@@ -37,7 +37,7 @@
       <label ng-bind="$ctrl.i18n.__('Default type')+':'"></label>
       <select name="default_type" class="form-control" ng-model="$ctrl.csvFormatData.default_type" required>
         <option ng-repeat="type in $ctrl.fieldsType" ng-if="type.defaultType" value="{{type.value}}">{{$ctrl.i18n.__(type.title)}}</option>
-      </select> 
+      </select>
     </div>
   </div>
 
@@ -48,7 +48,7 @@
   <div class="col-md-12">
     <div class="form-group">
       <label ng-bind="$ctrl.i18n.__('Attributes to be Converted')+':'"></label>
-      <csv-field-detail ng-repeat="field in $ctrl.csvFormatData.fields" field="field" fields-type="$ctrl.fieldsType" on-delete="$ctrl.deleteField(field)" semantics="$ctrl.semantics"></csv-field-detail>
+      <csv-field-detail ng-repeat="field in $ctrl.csvFormatData.fields" field="field" fields-type="$ctrl.fieldsType" on-change="$ctrl.changeField(field)" on-delete="$ctrl.deleteField(field)" semantics="$ctrl.semantics"></csv-field-detail>
     </div>
   </div>
 </div>
