Linking the status name with the process.

--- a/webapp/views/configuration/status.html
+++ b/webapp/views/configuration/status.html
@@ -53,7 +53,7 @@
             <img ng-src="{{ iconFn(element) }}" alt="" width="24" height="24">
           </terrama2-td>
           <terrama2-td title="{{ i18n.__('Name') }}">
-            <span ng-bind="element.name"></span>
+            <a ng-href="{{ element.url }}" ng-bind="element.name"></a>
           </terrama2-td>
           <terrama2-td title="{{ i18n.__('Project') }}">
             <span ng-bind="element.project"></span>
